--- a/Windows-7-сборки.css
+++ b/Windows-7-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 6903px;
+  min-height: 7032px;
 }
 
 .u-section-1 .u-text-1 {
@@ -169,7 +169,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5692px;
+    min-height: 5798px;
   }
 
   .u-section-1 .u-text-1 {
@@ -203,7 +203,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5975px;
+    min-height: 6153px;
   }
 
   .u-section-1 .u-image-1 {
@@ -279,13 +279,13 @@
   }
 
   .u-section-1 .u-btn-10 {
-    margin-bottom: 0;
+    margin-bottom: 29px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5163px;
+    min-height: 5363px;
   }
 
   .u-section-1 .u-text-1 {
@@ -486,8 +486,27 @@
     padding-left: 30px;
     padding-right: 30px;
   }
+} .u-section-2 {
+  background-image: none;
+}
 
-  .u-section-1 .u-btn-10 {
-    margin-bottom: 36px;
+.u-section-2 .u-sheet-1 {
+  min-height: 50vw;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 1.5rem;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-text-1 {
+    margin-top: 63px;
   }
 }
