--- a/Windows-Lite-x32-сборки.css
+++ b/Windows-Lite-x32-сборки.css
@@ -295,7 +295,7 @@
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 278px;
+    margin-top: 118px;
   }
 
   .u-section-1 .u-image-3 {
@@ -386,7 +386,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6172px;
+    min-height: 6181px;
   }
 
   .u-section-1 .u-text-1 {
@@ -435,7 +435,7 @@
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: 107px;
+    margin-top: 116px;
     margin-left: 39px;
     margin-right: 39px;
   }
@@ -515,7 +515,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5505px;
+    min-height: 5438px;
   }
 
   .u-section-1 .u-text-1 {
@@ -554,8 +554,8 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: -71px;
-    margin-right: -71px;
+    margin-left: -72px;
+    margin-right: -72px;
   }
 
   .u-section-1 .u-text-4 {
@@ -583,18 +583,18 @@
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: -91px;
-    margin-right: -91px;
+    margin-left: -92px;
+    margin-right: -92px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: -91px;
-    margin-right: -91px;
+    margin-left: -92px;
+    margin-right: -92px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-left: -91px;
-    margin-right: -91px;
+    margin-left: -92px;
+    margin-right: -92px;
   }
 
   .u-section-1 .u-image-5 {
@@ -627,35 +627,65 @@
 
   .u-section-1 .u-image-9 {
     height: 188px;
-    width: 340px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 216px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-10 {
     height: 188px;
     width: 340px;
-    margin-top: -485px;
+    margin-top: -390px;
     margin-left: 0;
     margin-right: 0;
   }
 
+  .u-section-1 .u-text-7 {
+    margin-top: 247px;
+    margin-left: -9px;
+    margin-right: -9px;
+  }
+
   .u-section-1 .u-btn-7 {
-    margin-left: -69px;
-    margin-right: -69px;
+    margin-left: -68px;
+    margin-right: -68px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-left: -69px;
-    margin-right: -69px;
+    margin-left: -68px;
+    margin-right: -68px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-left: -69px;
-    margin-right: -69px;
+    margin-left: -68px;
+    margin-right: -68px;
   }
 
   .u-section-1 .u-btn-10 {
     margin-bottom: 45px;
+  }
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 50vw;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 1.5rem;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-text-1 {
+    margin-top: 63px;
   }
 }
