--- a/Windows-Mini-сборки.css
+++ b/Windows-Mini-сборки.css
@@ -654,11 +654,6 @@
     margin-left: initial;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-left: -13px;
-    margin-right: -13px;
-  }
-
   .u-section-1 .u-btn-1 {
     align-self: center;
     margin-top: 46px;
@@ -909,7 +904,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 12006px;
+    min-height: 13094px;
   }
 
   .u-section-1 .u-text-1 {
@@ -992,24 +987,28 @@
 
   .u-section-1 .u-image-5 {
     height: 191px;
-    width: 100%;
-    margin-right: auto;
-    margin-left: 12px;
+    margin-top: 218px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-6 {
     height: 191px;
+    margin-top: -398px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-text-5 {
-    margin-right: auto;
-    margin-left: -12px;
+    margin-top: 253px;
+    margin-left: -16px;
+    margin-right: -16px;
   }
 
   .u-section-1 .u-btn-7 {
+    margin-top: 95px;
     margin-left: -71px;
     margin-right: -71px;
   }
@@ -1025,6 +1024,7 @@
   }
 
   .u-section-1 .u-text-6 {
+    margin-top: 107px;
     margin-left: -4px;
     margin-right: -4px;
   }
@@ -1081,18 +1081,18 @@
   }
 
   .u-section-1 .u-btn-13 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -73px;
+    margin-right: -73px;
   }
 
   .u-section-1 .u-btn-14 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -73px;
+    margin-right: -73px;
   }
 
   .u-section-1 .u-btn-15 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -73px;
+    margin-right: -73px;
   }
 
   .u-section-1 .u-text-10 {
@@ -1120,18 +1120,18 @@
   }
 
   .u-section-1 .u-btn-16 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -73px;
+    margin-right: -73px;
   }
 
   .u-section-1 .u-btn-17 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -73px;
+    margin-right: -73px;
   }
 
   .u-section-1 .u-btn-18 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -73px;
+    margin-right: -73px;
   }
 
   .u-section-1 .u-text-12 {
@@ -1191,18 +1191,18 @@
   }
 
   .u-section-1 .u-btn-22 {
-    margin-left: -71px;
-    margin-right: -71px;
+    margin-left: -70px;
+    margin-right: -70px;
   }
 
   .u-section-1 .u-btn-23 {
-    margin-left: -71px;
-    margin-right: -71px;
+    margin-left: -70px;
+    margin-right: -70px;
   }
 
   .u-section-1 .u-btn-24 {
-    margin-left: -71px;
-    margin-right: -71px;
+    margin-left: -70px;
+    margin-right: -70px;
   }
 
   .u-section-1 .u-text-16 {
@@ -1250,5 +1250,25 @@
   .u-section-1 .u-btn-30 {
     margin-left: -83px;
     margin-right: -83px;
+  }
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 50vw;
+}
+
+.u-section-2 .u-text-1 {
+  width: auto;
+  font-size: 3rem;
+  margin: 62px auto 60px;
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-text-1 {
+    font-size: 1.5rem;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
