--- a/Windows-XP-сборки.css
+++ b/Windows-XP-сборки.css
@@ -143,4 +143,16 @@
     margin-left: -47px;
     margin-right: -47px;
   }
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 50vw;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 1.5rem;
+  width: auto;
+  margin: 63px 0 60px;
 }
