--- a/Обновления-для-Windows.css
+++ b/Обновления-для-Windows.css
@@ -151,10 +151,8 @@
   }
 
   .u-section-1 .u-btn-8 {
-    margin-left: -27px;
-    margin-right: -27px;
-    padding-right: 34px;
-    padding-left: 33px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -201,8 +199,6 @@
   .u-section-1 .u-btn-8 {
     margin-left: -94px;
     margin-right: -94px;
-    padding-left: 0;
-    padding-right: 0;
   }
 
   .u-section-1 .u-btn-9 {
@@ -255,4 +251,16 @@
     margin-right: -83px;
     margin-bottom: 60px;
   }
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 50vw;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 1.5rem;
+  width: auto;
+  margin: 63px 0 60px;
 }
