--- a/Оригинальные-Windows.css
+++ b/Оригинальные-Windows.css
@@ -172,4 +172,16 @@
     margin-left: -97px;
     margin-right: -97px;
   }
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 50vw;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 1.5rem;
+  width: auto;
+  margin: 63px 0 60px;
 }
