--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -265,7 +265,7 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: 20px auto 0 183px;
+  margin: 20px auto 0 188px;
   padding: 11px 16px 12px;
 }
 
@@ -273,7 +273,7 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: -45px auto 0;
+  margin: -45px auto 0 473px;
   padding: 11px 45px 12px 44px;
 }
 
@@ -281,7 +281,7 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: -45px auto 0 682px;
+  margin: -45px auto 0 687px;
   padding: 11px 31px 12px;
 }
 
@@ -368,11 +368,15 @@
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: 82px;
+    margin-left: 87px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-left: 373px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: 583px;
+    margin-left: 588px;
   }
 
   .u-section-1 .u-btn-8 {
@@ -455,7 +459,7 @@
 
   .u-section-1 .u-btn-7 {
     margin-top: 9px;
-    margin-left: 49px;
+    margin-left: 55px;
   }
 
   .u-section-1 .u-btn-8 {
@@ -465,11 +469,11 @@
 
   .u-section-1 .u-btn-9 {
     margin-top: -99px;
-    margin-left: 335px;
+    margin-left: 329px;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-left: 514px;
+    margin-left: 508px;
   }
 
   .u-section-1 .u-btn-11 {
@@ -653,8 +657,8 @@
   .u-section-1 .u-btn-7 {
     margin-top: 65px;
     margin-left: auto;
-    padding-right: 34px;
-    padding-left: 33px;
+    padding-left: 38px;
+    padding-right: 38px;
   }
 
   .u-section-1 .u-btn-8 {
