--- a/Windows-Mini-сборки.css
+++ b/Windows-Mini-сборки.css
@@ -1271,4 +1271,18 @@
     margin-left: 0;
     margin-right: 0;
   }
+}.u-section-3 .u-sheet-1 {
+  min-height: 500px;
+}
+
+.u-section-3 .u-text-1 {
+  width: auto;
+  margin: 60px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-text-1 {
+    margin-left: 43px;
+    margin-right: 43px;
+  }
 }
