--- a/Оригинальные-Windows.css
+++ b/Оригинальные-Windows.css
@@ -182,6 +182,11 @@
 
 .u-section-2 .u-text-1 {
   font-size: 1.5rem;
-  width: auto;
-  margin: 63px 0 60px;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
 }
