--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1410px;
+  min-height: 1366px;
 }
 
 .u-section-1 .u-text-1 {
@@ -329,13 +329,73 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: -45px auto 60px 544px;
+  margin: -45px auto 57px 544px;
   padding: 11px 55px 12px 53px;
+}
+
+.u-section-1 .u-btn-14 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-15 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-16 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-17 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-18 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-19 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-20 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-21 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-22 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
+}
+
+.u-section-1 .u-btn-23 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 1rem;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1421px;
+    min-height: 1406px;
   }
 
   .u-section-1 .u-text-1 {
@@ -400,13 +460,18 @@
   }
 
   .u-section-1 .u-btn-13 {
+    margin-bottom: 45px;
     margin-left: 444px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1601px;
+    min-height: 1475px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: 60px;
   }
 
   .u-section-1 .u-text-2 {
@@ -430,12 +495,22 @@
     margin-right: 37px;
   }
 
+  .u-section-1 .u-gallery-1 {
+    height: 330px;
+    width: 610px;
+    margin-top: 8px;
+  }
+
   .u-section-1 .u-carousel-control-1 {
-    left: -60px;
+    left: -49px;
   }
 
   .u-section-1 .u-carousel-control-2 {
-    right: -60px;
+    right: -48px;
+  }
+
+  .u-section-1 .u-list-1 {
+    margin-top: -67px;
   }
 
   .u-section-1 .u-repeater-1 {
@@ -491,16 +566,22 @@
   .u-section-1 .u-btn-13 {
     margin-top: 9px;
     margin-left: auto;
+    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1785px;
+    min-height: 1875px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: 34px;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
+    margin-top: 34px;
     margin-left: 29px;
     margin-right: 29px;
   }
@@ -510,19 +591,19 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: 39px;
+    margin-left: 38px;
   }
 
   .u-section-1 .u-text-3 {
     width: 358px;
+    margin-top: 111px;
     margin-left: auto;
     margin-right: auto;
   }
 
   .u-section-1 .u-gallery-1 {
     width: 540px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: -309px;
   }
 
   .u-section-1 .u-carousel-control-1 {
@@ -531,6 +612,10 @@
 
   .u-section-1 .u-carousel-control-2 {
     right: -47px;
+  }
+
+  .u-section-1 .u-list-1 {
+    margin-top: 425px;
   }
 
   .u-section-1 .u-text-4 {
@@ -547,44 +632,104 @@
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: 238px;
-    padding-right: 15px;
+    margin-left: 237px;
     padding-left: 15px;
+    padding-right: 15px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 63px;
     margin-left: 282px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-top: -153px;
-    margin-left: 59px;
+    margin-top: 9px;
+    margin-left: 302px;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-top: 9px;
-    margin-left: 76px;
+    margin-top: -153px;
+    margin-left: 69px;
   }
 
   .u-section-1 .u-btn-11 {
-    margin-top: -45px;
-    margin-left: 242px;
+    margin-top: 63px;
+    margin-left: 68px;
   }
 
   .u-section-1 .u-btn-12 {
-    margin-top: 9px;
+    margin-top: -99px;
     margin-left: 65px;
+  }
+
+  .u-section-1 .u-btn-13 {
+    margin-top: 63px;
+    margin-bottom: 0;
+  }
+
+  .u-section-1 .u-btn-14 {
+    font-size: 0.875rem;
+    margin: -972px auto 0;
+    padding: 11px 62px 12px 61px;
+  }
+
+  .u-section-1 .u-btn-15 {
+    font-size: 0.875rem;
+    margin: 9px auto 0;
+    padding: 11px 62px 12px 61px;
+  }
+
+  .u-section-1 .u-btn-16 {
+    font-size: 0.875rem;
+    margin: 9px auto 0;
+    padding: 11px 60px 12px;
+  }
+
+  .u-section-1 .u-btn-17 {
+    font-size: 0.875rem;
+    margin: 9px auto 0;
+    padding: 11px 60px 12px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    font-size: 0.875rem;
+    margin: 9px auto 0;
+    padding: 11px 66px 12px 65px;
+  }
+
+  .u-section-1 .u-btn-19 {
+    font-size: 0.875rem;
+    margin: 9px auto 0;
+    padding: 11px 62px 12px 61px;
+  }
+
+  .u-section-1 .u-btn-20 {
+    font-size: 0.875rem;
+    margin: 9px auto 0;
+    padding: 11px 58px 12px;
+  }
+
+  .u-section-1 .u-btn-21 {
+    font-size: 0.875rem;
+    margin: 9px auto 0;
+    padding: 11px 56px 12px 55px;
+  }
+
+  .u-section-1 .u-btn-22 {
+    font-size: 0.875rem;
+    margin: 9px auto 0;
+    padding: 11px 50px 12px 49px;
+  }
+
+  .u-section-1 .u-btn-23 {
+    font-size: 0.875rem;
+    margin: 9px auto 60px;
+    padding: 11px 47px 12px 46px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1782px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 60px;
+    min-height: 1959px;
   }
 
   .u-section-1 .u-text-2 {
@@ -598,28 +743,24 @@
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 63px;
     margin-left: auto;
     padding-right: 68px;
     padding-left: 67px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -99px;
     margin-left: auto;
     padding-right: 69px;
     padding-left: 68px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: 63px;
     padding-left: 16px;
     padding-right: 16px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-top: 66px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -627,18 +768,11 @@
   .u-section-1 .u-gallery-1 {
     height: 202px;
     width: 287px;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-list-1 {
-    margin-top: -72px;
+    margin-left: -430px;
   }
 
   .u-section-1 .u-text-4 {
     font-size: 1.5rem;
-    margin-top: 186px;
   }
 
   .u-section-1 .u-btn-5 {
@@ -648,58 +782,61 @@
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: 10px;
+    margin-top: 9px;
     margin-left: auto;
     padding-right: 83px;
     padding-left: 82px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-top: 65px;
+    margin-top: 63px;
     margin-left: auto;
     padding-left: 38px;
     padding-right: 38px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: 175px;
+    margin-top: 171px;
     margin-left: auto;
     padding-left: 65px;
     padding-right: 65px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-top: -320px;
+    margin-top: -315px;
     margin-left: auto;
     padding-right: 77px;
     padding-left: 76px;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-top: 120px;
+    margin-top: 117px;
     margin-left: auto;
     padding-left: 83px;
     padding-right: 83px;
   }
 
   .u-section-1 .u-btn-11 {
-    margin-top: -100px;
+    margin-top: -99px;
     margin-left: auto;
     padding-right: 42px;
     padding-left: 41px;
   }
 
   .u-section-1 .u-btn-12 {
-    margin-top: 65px;
+    margin-top: 63px;
     margin-left: auto;
     padding-right: 57px;
     padding-left: 56px;
   }
 
   .u-section-1 .u-btn-13 {
-    margin-top: 65px;
     padding-right: 26px;
     padding-left: 25px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-top: -1188px;
   }
 } .u-section-2 {
   background-image: none;
