--- a/СтарыйСофт-для-Windows-XPVista.css
+++ b/СтарыйСофт-для-Windows-XPVista.css
@@ -661,8 +661,15 @@
 
 .u-section-2 .u-text-1 {
   font-size: 1.5rem;
-  width: auto;
-  margin: 63px 10px 60px;
+  margin: 0 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
 @media (max-width: 767px) {
